--- a/Medicine Dispenser - Windows Client/My Project/Resources.resx
+++ b/Medicine Dispenser - Windows Client/My Project/Resources.resx
@@ -121,4 +121,10 @@
   <data name="patient" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\patient.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hand_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hand_blue.svg;DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
+  <data name="hand_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hand_green.svg;DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
 </root>
